--- a/app/client/style.css
+++ b/app/client/style.css
@@ -12,6 +12,7 @@
  */
 body {
   --bs-light-rgb: var(--matr-navbar-bg-rgb);
+  background: fixed center url("/images/background.png");
 }
 
 /* Set the alert background on the signin and signup pages. */
